--- a/build.gradle
+++ b/build.gradle
@@ -22,12 +22,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-batch'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.batch:spring-batch-test'
     implementation group: 'com.opencsv', name: 'opencsv', version: '3.7'
     implementation 'net.sf.ehcache:ehcache-core:2.6.11'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
 }
 
 test {
